--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ button {
 
 * {
   box-sizing: border-box;
+  border: 0;
 }
 
 /* #endregion */
@@ -194,7 +195,6 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #fff;
-  border: none;
 }
 
 /* #endregion */
@@ -282,20 +282,41 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.our-team-list {
+    display: flex;
+    gap: 24px;
+}
+
+.team-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0 0 4px 4px;
+    padding: 0px 0px 32px 0px;
+    width: 264px;
+    height: 380px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
 }
 
 .team-photo {
   width: 264px;
   height: 260px;
+  margin-bottom: 32px;
 }
 
-.team-item {
+.team-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -318,20 +339,34 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
-.our-portfolio-picture {
-  width: 360px;
-  height: 300px;
-  border-bottom: 1px solid #e7e9fc;
+.our-portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 
 .our-portfolio-item {
+  width: 360px;
+  border-bottom: 1px solid #e7e9fc;
+  
+}
+
+.our-portfolio-picture {
+    margin-bottom: 32px;
+}
+
+.our-portfolio-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+  padding-left: 16px;
 }
 
 .our-portfolio-text {
@@ -340,6 +375,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding-left: 16px;
+  padding-bottom: 32px;
 }
 
 /* #endregion */
@@ -348,6 +385,14 @@ img {
 
 .footer {
   background-color: #2e2f42;
+  width: 1440px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.logo-footer {
+    margin-bottom: 16px;
+    display: block;
 }
 
 .footer-text {
@@ -356,6 +401,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  width: 264px;
+  font-family: "Roboto", sans-serif;
 }
 
 /* #endregion */
